crates/iroha_primitives_derive/tests/ui/fail/numeric_invalid.rs
//! `numeric!` should reject malformed literals.

use iroha_primitives_derive::numeric;

fn main() {
    let _ = numeric!(12.3.4);
}
